--- a/3_DUE_SDC_probability_Against_Raw_BER/Conservative_on/Makefile
+++ b/3_DUE_SDC_probability_Against_Raw_BER/Conservative_on/Makefile
@@ -1,11 +1,11 @@
 CC=g++
 CFLAGS=-O2
-EXEC=Fault_sim_start
+EXEC=Reliability_Against_Raw_BER_sim_start
 
 all: $(EXEC)
 
-$(EXEC): Fault_sim.cpp
-	$(CC) $(CFLAGS) Fault_sim.cpp -o $(EXEC)
+$(EXEC): Reliability_Against_Raw_BER_sim.cpp
+	$(CC) $(CFLAGS) Reliability_Against_Raw_BER_sim.cpp -o $(EXEC)
 
 clean:
 	rm -f $(EXEC)
